--- a/screen2.html
+++ b/screen2.html
@@ -220,7 +220,7 @@
 		}
 		body{
     transform-origin: left top;
-    transform: scale(1.2) translateY(12vh);}
+    transform: scale(1.1) translateY(18vh) translateX(20vh)}
 		body, html{
 			width: 200vw;
 			height: 200vh;
