--- a/screen2.html
+++ b/screen2.html
@@ -205,7 +205,7 @@
 						$('.tab_5').css({'height':tab_hei_unit*0.75+'px'})
 					}
 				}
-				reloading()
+				//reloading()
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
@@ -228,7 +228,7 @@
 		}
 		body{
     transform-origin: left top;
-    transform: scale(1.25) translateY(15vh) translateX(20vh)}
+    transform: scale(1.3) translateY(15vh) translateX(20vh)}
 		body, html{
 			width: 200vw;
 			height: 200vh;
