--- a/screen2.html
+++ b/screen2.html
@@ -205,7 +205,7 @@
 						$('.tab_5').css({'height':tab_hei_unit*0.75+'px'})
 					}
 				}
-				//reloading()
+				reloading()
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
