--- a/screen2.html
+++ b/screen2.html
@@ -138,7 +138,7 @@
 					]	
 					var frame_rate = [ 4 , 24 , 6 , 6 , 12 , 12 , 30 ]		
 					var frame_rate_sec = [250,40,165,85,30]		
-					var adjustment = 4.5
+					var adjustment = 4
 				for (var i = size.split('<rect').length - 1; i >= 1; i--) {
 					$('body').append('<div class="box box_'+i+' boxclass_'+(i%12)+'"></div>')
 					$('.box_'+i).css({'left':parseInt(size.split('x="')[i].split('"')[0])*adjustment+'px'})
@@ -162,8 +162,8 @@
 					}else{
 						$('.box_'+i).css({'transform':'rotate(90deg)'})
 					}
-					var wid = parseInt(size.split('width="')[i].split('"')[0])*adjustment
-					var hei = parseInt(size.split('height="')[i].split('"')[0])*adjustment
+					var wid = parseInt(size.split('width="')[i].split('"')[0])*adjustment*1.25
+					var hei = parseInt(size.split('height="')[i].split('"')[0])*adjustment*1.25
 					$('.box_'+i).css({'width': wid+'px'})
 					$('.box_'+i).css({'height': hei+'px'})
 					if( (hei<50&&wid>50)){
