--- a/screen2.html
+++ b/screen2.html
@@ -179,6 +179,7 @@
 						$('.box_'+i).append('<div class="bomb bomb_'+(i%9+1)+'" style="width:'+wid+'px ; height:'+hei+'px ;"></div>')
 						$('.box_'+i).append('<div class="tabs desk_tabs_'+(Math.floor(Math.random()*2)+1)+'" style="width:'+wid+'px ; height:'+hei+'px ;"></div>')
 					}
+					$('.box_'+i).css({'height': hei*1.2+'px'})
 					var tab_hei_unit = 3.5
 
 					if(i==1){
