--- a/screen2.html
+++ b/screen2.html
@@ -170,8 +170,7 @@
 						$('.box_'+i).append('<div class="bomb bomb_'+(i%9+1)+'" style="width:'+hei+'px ; height:'+wid+'px ; transform:rotate('+90+'deg);"></div>')
 						$('.box_'+i).append('<div class="tabs mobile_tabs_1" style="width:'+hei+'px ; height:'+wid+'px ; transform:rotate('+90+'deg);"></div>')
 						//ismobile && wide
-					}
-					if((hei>50&&wid<50)){
+					}else if((hei>50&&wid<50)){
 						$('.box_'+i).append('<div class="bomb bomb_'+(i%9+1)+'" style="width:'+wid+'px ; height:'+hei+'px ;"></div>')
 						$('.box_'+i).append('<div class="tabs mobile_tabs_1" style="width:'+wid+'px ; height:'+hei+'px ;"></div>')
 						//ismobile && long
