--- a/screen2.html
+++ b/screen2.html
@@ -205,6 +205,7 @@
 						$('.tab_5').css({'height':tab_hei_unit*0.75+'px'})
 					}
 				}
+				console.log('1')
 				reloading()
 				function reloading(){
 					setTimeout(function(){
