--- a/screen2.html
+++ b/screen2.html
@@ -178,7 +178,7 @@
 						$('.box_'+i).append('<div class="bomb bomb_'+(i%9+1)+'" style="width:'+wid+'px ; height:'+hei+'px ;"></div>')
 						$('.box_'+i).append('<div class="tabs desk_tabs_1" style="width:'+wid+'px ; height:'+hei+'px ;"></div>')
 					}
-					$('.box_'+i).css({'height': hei*1.2+'px'})
+					// $('.box_'+i).css({'height': hei*1.2+'px'})
 					var tab_hei_unit = 3.5
 
 					if(i==1){
