--- a/screen2.html
+++ b/screen2.html
@@ -281,6 +281,7 @@
 .boxclass_2{
     filter: blur(1vh);}
 		.tab{
+			filter: invert(1);
 			position: absolute;
 			width: 100%;
 			background-size: auto 100%;
