--- a/screen2.html
+++ b/screen2.html
@@ -213,7 +213,7 @@
 					}
 				}
 				console.log('1')
-				// reloading()
+				reloading()
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
