--- a/screen2.html
+++ b/screen2.html
@@ -307,7 +307,7 @@
 			background:linear-gradient(#ffff8a, #fffce0);
 		}
 		.grad{
-    /*filter: blur(1vh);*/
+    filter: blur(1vh);
 }
 .boxclass_2{
     filter: blur(1vh);
