--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 			margin: 0;
 			padding: 0
 		}
+		body{
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: left top;}
 		body, html{
 			width: 200vw;
 			height: 200vh;
