--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			padding: 0
 		}
 		body{
-    transform: rotate(90deg) translateY(-100vw) scale(3);
+    transform: rotate(90deg) translateX(5vw) translateY(-100vw) scale(3);
     transform-origin: left top;
 }
 		body, html{
