--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 		3
 		8
 		15*/
-
+html{background:linear-gradient(90deg, #ffbe05, black 25%)}
 		body{
-    transform: rotate(90deg) translateX(15vw) translateY(-100vw) scale(3);
+    transform: rotate(90deg) translateX(5vw) translateY(-100vw) scale(3);
     transform-origin: left top;
 }
 		body, html{
