--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		15*/
 html{background:linear-gradient(90deg, #ffbe05, black 25%)}
 		body{
-    transform: rotate(90deg) translateX(5vw) translateY(-100vw) scale(3);
+    transform: rotate(90deg) translateX(5vw) translateY(-75vw) scale(3);
     transform-origin: left top;
 }
 		body, html{
@@ -131,7 +131,7 @@ html{background:linear-gradient(90deg, #ffbe05, black 25%)}
 			position: absolute;
 			left: 0;
 			top: 0;
-			background-color: black;
+			/*background-color: black;*/
 			overflow: hidden;
 		}
 		.box{
