--- a/screen2.html
+++ b/screen2.html
@@ -213,7 +213,7 @@
 					}
 				}
 				console.log('1')
-				// reloading()
+				reloading()
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
@@ -235,6 +235,7 @@
 			padding: 0
 		}
 		body{
+			overflow: visible !important;
     transform-origin: left top;
     transform: scale(1.25) translateY(15vh) translateX(20vh)}
 		body, html{
@@ -260,6 +261,7 @@
 			top: 0;
 			background-size: cover;
 			background-position: center;
+			background:none !important
 		}
 		.tabs{
 			position: absolute;
@@ -269,12 +271,13 @@
 		.textbox{
 			position: absolute;
 			color: red;
+			color: transparent;
 			left: 0;
 			top: 0;
 			z-index: 1000
 		}
 		.boxclass_0 .grad,.boxclass_0{
-    		background: linear-gradient( 90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(255, 0, 0, 1) 100%);
+    		/*background: linear-gradient( 90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(255, 0, 0, 1) 100%);*/
 		}
 		.boxclass_1 .grad,
 .boxclass_2 .grad,
@@ -282,7 +285,7 @@
 .boxclass_1,
 .boxclass_2,
 .boxclass_3{
-			background:linear-gradient(#85ffea, #bbf9ff);
+			/*background:linear-gradient(#85ffea, #bbf9ff);*/
 		}
 		.boxclass_4 .grad,
 		.boxclass_5 .grad,
@@ -292,22 +295,22 @@
 .boxclass_5,
 .boxclass_6,
 .boxclass_7{
-			background:linear-gradient(#00e5ff, #e7e7e7) ;
+			/*background:linear-gradient(#00e5ff, #e7e7e7) ;*/
 		}
 		.boxclass_8 .grad,
 		.boxclass_9 .grad,
 		.boxclass_8,
 		.boxclass_9{
-			background:linear-gradient(#ffade6, #ffeb3b);
+			/*background:linear-gradient(#ffade6, #ffeb3b);*/
 		}
 		.boxclass_10 .grad,
 		.boxclass_11 .grad,
 		.boxclass_10,
 		.boxclass_11 {
-			background:linear-gradient(#ffff8a, #fffce0);
+			/*background:linear-gradient(#ffff8a, #fffce0);*/
 		}
 		.grad{
-    filter: blur(1vh);
+    /*filter: blur(1vh);*/
 }
 .boxclass_2{
     /*filter: blur(1vh);*/
@@ -369,7 +372,7 @@
 		     height: 350px;
 		     background: linear-gradient(transparent, white 80%);
 		     left: 800px;
-		     filter: blur(5vh);
+		     /*filter: blur(5vh);*/
 		 }
 		 .overlay_light_1{
 		     left: 800px;
@@ -385,11 +388,21 @@
 		     .box_101,.box_93{
 		     	transform: rotate(0deg) !important;
 		     }
+		     .box_61, .box_62, .box_63, .box_64, .box_65, .box_66, .box_67, .box_68, .box_69, .box_70, .box_71, .box_72, .box_73, .box_74, .box_75, .box_76, .box_77, .box_78, .box_79, .box_80, .box_81, .box_82, .box_83, .box_84, .box_85, .box_86, .box_87, .box_88, .box_89, .box_91, .box_92, .box_93, .box_94, .box_95, .box_96, .box_97, .box_98, .box_99, .box_100, .box_101, .box_102, .box_103, .box_104, .box_105, .box_106, .box_107{
+		     	display: none
+		     }
+    .bgimg{
+    position: absolute;
+    width: 1446px;
+    top: -93px;
+    left: -15px;
+    }
 	</style>
 </head>
 
 <body>
-	<div class="overlay_light overlay_light_1"></div>
+	<img src="bgimg.png" class="bgimg">
+	<!-- <div class="overlay_light overlay_light_1"></div>
 	<div class="overlay_light overlay_light_2"></div>
 	<div class="overlay_light overlay_light_3"></div>
 	<div class="overlay_light overlay_light_1"></div>
@@ -397,6 +410,6 @@
 	<div class="overlay_light overlay_light_3"></div>
 	<div class="overlay_light overlay_light_1"></div>
 	<div class="overlay_light overlay_light_2"></div>
-	<div class="overlay_light overlay_light_3"></div>
+	<div class="overlay_light overlay_light_3"></div> -->
 </body>
 </html>
