--- a/screen2.html
+++ b/screen2.html
@@ -277,7 +277,7 @@
 			z-index: 1000
 		}
 		.boxclass_0 .grad,.boxclass_0{
-    		/*background: linear-gradient( 90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(255, 0, 0, 1) 100%);*/
+    		background: linear-gradient( 90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(255, 0, 0, 1) 100%);
 		}
 		.boxclass_1 .grad,
 .boxclass_2 .grad,
@@ -285,7 +285,7 @@
 .boxclass_1,
 .boxclass_2,
 .boxclass_3{
-			/*background:linear-gradient(#85ffea, #bbf9ff);*/
+			background:linear-gradient(#85ffea, #bbf9ff);
 		}
 		.boxclass_4 .grad,
 		.boxclass_5 .grad,
@@ -295,19 +295,19 @@
 .boxclass_5,
 .boxclass_6,
 .boxclass_7{
-			/*background:linear-gradient(#00e5ff, #e7e7e7) ;*/
+			background:linear-gradient(#00e5ff, #e7e7e7) ;
 		}
 		.boxclass_8 .grad,
 		.boxclass_9 .grad,
 		.boxclass_8,
 		.boxclass_9{
-			/*background:linear-gradient(#ffade6, #ffeb3b);*/
+			background:linear-gradient(#ffade6, #ffeb3b);
 		}
 		.boxclass_10 .grad,
 		.boxclass_11 .grad,
 		.boxclass_10,
 		.boxclass_11 {
-			/*background:linear-gradient(#ffff8a, #fffce0);*/
+			background:linear-gradient(#ffff8a, #fffce0);
 		}
 		.grad{
     /*filter: blur(1vh);*/
