--- a/screen2.html
+++ b/screen2.html
@@ -217,7 +217,7 @@
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
-					},6000)
+					},10000)
 
 				}
 
@@ -401,7 +401,7 @@
 </head>
 
 <body>
-	<img src="/bgimg.png" class="bgimg">
+	<img src="https://yehwansong.github.io/arko/bgimg.png" class="bgimg">
 	<!-- <div class="overlay_light overlay_light_1"></div>
 	<div class="overlay_light overlay_light_2"></div>
 	<div class="overlay_light overlay_light_3"></div>
