--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					counter++
     				window.requestAnimationFrame(animate);
 				}
-				reloading()
+				// reloading()
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
@@ -116,7 +116,7 @@
 		15*/
 html{background:linear-gradient(90deg, #ffbe05, black 25%)}
 		body{
-    transform: rotate(90deg) translateX(5vw) translateY(-75vw) scale(3);
+    transform: rotate(90deg) translateX(5vw) translateY(-82vw) scale(3);
     transform-origin: left top;
 }
 		body, html{
