--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@ html{background:linear-gradient(90deg, #ffbe05, black 25%)}
 	</style>
 </head>
 <body>
-	<img src="/bgimg2.png" class="bgimg">
+	<img src="https://yehwansong.github.io/arko/bgimg2.png" class="bgimg">
 </body>
 </html>
