--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 		3
 		8
 		15*/
-html{background:linear-gradient(90deg, #ffbe05, black 25%)}
+html{background:linear-gradient(90deg, #2646ff, black 25%)}
 		body{
-    transform: rotate(90deg) translateX(12vw) translateY(-82vw) scale(3);
+    transform: rotate(90deg) translateX(15vw) translateY(-82vw) scale(3);
     transform-origin: left top;
 }
 		body, html{
