--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					counter++
     				window.requestAnimationFrame(animate);
 				}
-				reloading()
+				// reloading()
 				function reloading(){
 					setTimeout(function(){
 				    window.location.reload();
