--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		3
 		8
 		15*/
-html{background:linear-gradient(90deg, #2646ff, black 25%)}
+html{background:linear-gradient(90deg, #73ffec, black 25%)}
 		body{
     transform: rotate(90deg) translateX(15vw) translateY(-82vw) scale(3.5);
     transform-origin: left top;
