--- a/screen2.html
+++ b/screen2.html
@@ -434,19 +434,22 @@
     .box_110,.box_111,.box_112,.box_113,.box_114,.box_109,.box_108{
     	display: none;
     }
+    .hovered1{
+    	background-color: red !important;
+    	background-image:none;
+    }
+    .hovered2{
+    	background-color: blue !important;
+    	background-image:none;
+    }
+    .hovered3{
+    	background-color: #0fff0f !important;
+    	background-image:none;
+    }
 	</style>
 </head>
 
 <body>
-	<div class="point point1">
-		<div class="point_inner"></div><div class="point_inner"></div><div class="point_inner"></div>
-	</div>
-	<div class="point point2">
-		<div class="point_inner"></div><div class="point_inner"></div><div class="point_inner"></div>
-	</div>
-	<div class="point point3">
-		<div class="point_inner"></div><div class="point_inner"></div><div class="point_inner"></div>
-	</div>
 	<img src="https://yehwansong.github.io/arko/bgimg.png" class="bgimg">
 	<!-- <div class="overlay_light overlay_light_1"></div>
 	<div class="overlay_light overlay_light_2"></div>
