--- a/index.html
+++ b/index.html
@@ -236,6 +236,6 @@
 </head>
 <body>
 	<div class="wrapper">
-	<img src="https://yehwansong.github.io/arko/bgimg2.png" class="bgimg"></div>
+	<img src="bgimg2.png" class="bgimg"></div>
 </body>
 </html>
